# piezo_stage_controller

./: .gitignore  readme.md
board/: #auto_saved_files#  a_input.kicad_sch  board.kicad_pcb  board.kicad_prl  board.kicad_pro  board.kicad_sch  output_stage.kicad_sch  power.kicad_sch
board/bom/: ibom.html
board/piezo_ctrl_anton_lööf_v1/: board-B_Cu.gbr  board-B_Mask.gbr  board-B_Paste.gbr  board-B_Silkscreen.gbr  board-Edge_Cuts.gbr  board-F_Cu.gbr  board-F_Mask.gbr  board-F_Paste.gbr  board-F_Silkscreen.gbr  board-NPTH.drl  board-PTH.drl  board-job.gbrjob
piezo_sw/: CMakeLists.txt  piezo_controller_sw.c  tdm.pio
sim/: Draft1.asc  MCP6401.lib  output_amp_sim.asc  output_amp_sim.op.raw  output_amp_sim.raw  photodiode_to_diff_with_offset.asc  photodiode_to_diff_with_offset.log.raw  photodiode_to_diff_with_offset.op.raw  photodiode_to_diff_with_offset.raw  voltage_limiter.asc
sim/snom187a/: lmc6042.opj
sim/snom187a/LMC6042-PSpiceFiles/SCHEMATIC1/Transient/: Transient.1OP  Transient.cir  Transient.json  Transient.mif  Transient.out  Transient.out.1
sim/snom187a/old_models/: lmc6042.libsig
